tests/samples/negative/functions/extern_abi_signature_mismatch.ax
module extern_abi_signature_mismatch;

extern c {
  @name("same_extern_symbol")
  fn first(value: i32) -> i32;
  @name("same_extern_symbol")
  fn second(value: *const u8) -> i32;
}

fn main() -> i32 {
  return first(1) + second(c"x");
}
